# bigquery-to-datastore-via-beam

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  config.yaml  pyproject.toml
bigquery_to_datastore_via_beam/: library.py  run.py
examples/: fake_data.py  requirements.txt
