[tool.poetry]
name = "bigquery-to-datastore-via-beam"
version = "0.1.0"
description = ""
authors = ["Richard He"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apache-beam = { version = "2.51.0", extras = ["gcp"] }
pendulum = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
